--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Login</title>
-    <link rel="stylesheet" href="style2.css">
+    <link rel="stylesheet" href="login.css">
 </head>
 
 <body>
