--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <title>Meu Projeto</title>
+    <link rel="stylesheet" href="Index.css">
 </head>
 
 <body>
@@ -13,14 +13,15 @@
         <a href="#"><span>CORP.IT</span></a>
         <nav class="nav-links">
             <ul>
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Serviços</a></li>
-                    <li><a href="#">Projetos</a></li>
-                <li class="login-li">
-                    <a href="login.html" class="nav-button">Login</a>
+                <li><a href="#">Inicio</a></li>
+                <li><a href="#">Serviços</a></li>
+                <li><a href="#">Projetos</a></li>
+    
                 </li>
             </ul>
+             
         </nav>
+        <div><a href="login.html" class="botao-login">Login</a></div>
     </header>
     <div id="title">Nossos parceiros</div>
     <!--div id="subLine"></div-->
@@ -29,7 +30,8 @@
             <!--img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
                 alt="Google Logo" width="200" height="67,65">-->
             <a href="https://www.google.org/?utm_source=about&utm_medium=referral&utm_campaign=footer-link">
-             <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png">
+                <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png"
+                    alt="Google Logo" width="200" height="auto,auto">
             </a>
         </div>
         <div class="grid-item">O Google é uma empresa multinacional de tecnologia,
@@ -44,7 +46,8 @@
             <!--img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Microsoft_logo_%282012%29.svg"
                 alt="Microsoft Logo" width="200" height="67,65"-->
             <a href="https://www.microsoft.com/pt-br/about/company">
-                 <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Microsoft_logo_%282012%29.svg">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/9/96/Microsoft_logo_%282012%29.svg"
+                    alt="Microsoft Logo" width="200" height="auto,auto">
             </a>
         </div>
         <div class="grid-item">A Microsoft é uma empresa multinacional de tecnologia com sede
@@ -53,11 +56,13 @@
             Bill Gates e Paul Allen, a empresa cresceu e se tornou uma das maiores e mais valiosas
             empresas de tecnologia do mundo, com um foco principal em software, incluindo o sistema
             operacional Windows,
-            e serviços em nuvem como o Microsoft 365.<a id="moreInfo"
-                href="https://pt.wikipedia.org/wiki/Microsoft"> Saiba mais...</a></div></div>
+            e serviços em nuvem como o Microsoft 365.<a id="moreInfo" href="https://pt.wikipedia.org/wiki/Microsoft">
+                Saiba mais...</a></div>
+    </div>
     </div>
     <br><br><br><br>
-    <div style="width: 300px; margin: 0 auto;"></divstyle>
+    <div style="width: 300px; margin: 0 auto;">
+        </divstyle>
         Click na logo para para informações
     </div>
     <div id="dialogArea">
